<resources>
    <string name="app_name">AndroidProject</string>
    <string name="email">email</string>
    <string name="display_name">display name</string>
    <string name="new_Password">New password</string>
    <string name="confirm_Password">Confirm password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="Confirm_password">confirm password</string>
    <string name="user_name">user name</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello">Hello</string>
    <string name="confirm_New_Password">Confirm new password</string>
    <string name="cart">Cart</string>
    <string name="title">title</string>
    <string name="add_to_chart">Add To Chart</string>
    <string name="description">Description</string>
    <string name="_1">1</string>
    <string name="todo">TODO</string>
    <string name="dollar">$</string>
    <string name="password">password</string>
    <string name="GenerateReport">Generate Report</string>
    <string name="AddEmployee">Add Employee</string>
    <string name="RestaurantLogo">ResturantLogo</string>
    <string name="EmployeeName">EmployeeName</string>
    <string name="EmployeeSalary">EmployeeSalary</string>
    <string name="Chef">Chef</string>
    <string name="DeliveryEmployee">DeliveryEmployee</string>
    <string name="Report">Report</string>
    <string name="my_cart">My Cart</string>
    <string name="scrollOfView">ScrollOfView</string>
    <string name="item_total">Item Total</string>
    <string name="$0">$0</string>
    <string name="delivery_services">Delivery Services</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="checkout">CheckOut</string>
    <string name="your_cart_is_empty">Your Cart Is Empty</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="totalProfit">totalProfit</string>
    <string name="TotalProfit">Total Profit</string>
</resources>