<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.GenerateReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/Report"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/RestaurantLogo"
            app:layout_constraintBottom_toTopOf="@+id/GenerateReportView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.071"
            app:srcCompat="@drawable/restaurant_logo" />

        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/GenerateReportView"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:background="#FBFAFA"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="245dp">

    </androidx.recyclerview.widget.RecyclerView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TotalProfit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/TotalProfit"
            android:textColor="#373b54"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/$0"
            android:textColor="#373b54"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>